[tool.poetry]
name = "coot-videotext"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coot_videotext"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorboard = "^2.11.2"
numpy = "^1.24.1"
transformers = "^4.25.1"
h5py = "^3.7.0"
tqdm = "^4.64.1"
pyyaml = "^6.0"
gputil = "^1.4.0"
psutil = "^5.9.4"
pydantic = "^1.10.4"
pathspec = "^0.10.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pycodestyle = "^2.10.0"
pylint = "^2.15.10"
pycocoevalcap = "^1.2"
nltk = "^3.8.1"
ffmpeg-python = "^0.2.0"
pillow = "^9.4.0"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
